found some exceptions for input, added load on program startup, added save on user cancellation from the program, consolidated load function more

--- a/personalExpenseTracker/personalExpenseTracker.ipynb
+++ b/personalExpenseTracker/personalExpenseTracker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "83e4032e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ffae0849",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "13cfee59",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "71b0844d",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "57506daa",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "d293ae15",
    "metadata": {},
    "outputs": [],
@@ -395,6 +395,9 @@
     "        with open('expenses.csv', 'r', newline='') as expensesFile:\n",
     "            expensesReader = csv.DictReader(expensesFile)\n",
     "            expensesRows = list(expensesReader)\n",
+    "            print('Expenses loaded successfully!')\n",
+    "            for expense in expensesRows:\n",
+    "                print(expense)\n",
     "    except FileNotFoundError as e:\n",
     "        print(f'File could not be found! creating the file expenses.csv now. {e}')\n",
     "        expensesFile = open('expenses.csv', 'w')   #Create the file with write mode\n",
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "bdc7b84b",
    "metadata": {},
    "outputs": [],
@@ -423,6 +426,7 @@
     "\n",
     "    INPUT_OPTIONS = ['Add expense', 'View expenses', 'Track budget', 'Save expenses', 'Exit']\n",
     "    addedExpenses = []\n",
+    "    loadCSVExpenses()\n",
     "\n",
     "    #We want to create a loop of the options until the user exits and is done with adding, saving, loading, etc.\n",
     "    while True:\n",
@@ -433,13 +437,21 @@
     "\n",
     "        \n",
     "        choice = input('Enter the number of your choice: ')\n",
-    "        if(choice == ''):    #User canceled input\n",
+    "        if(choice == ''):    #User canceled input save just in case\n",
+    "            print('User canceled.')\n",
+    "            saveCSVExpenses(addedExpenses)\n",
     "            break\n",
     "        try:\n",
     "            choice = int(choice)    #Check if User input an integer, if not skip and default to 0, start over\n",
     "        except TypeError:\n",
     "            print('You did not enter a valid number or an integer. Please try again.')\n",
     "            choice = 0\n",
+    "        except ValueError:\n",
+    "            print('You did not enter a number. Please try again.')\n",
+    "            choice = 0\n",
+    "        except Exception as e:\n",
+    "            print(f'Unexpected error occurred: {e}')\n",
+    "            return None\n",
     "\n",
     "\n",
     "        choiceName = ''\n",
@@ -481,11 +493,8 @@
     "\n",
     "            #Check which option the user picked above and run that method\n",
     "            if(viewName == 'Load expenses'):\n",
-    "                loadedExpensesFile = loadCSVExpenses()\n",
+    "                loadCSVExpenses()\n",
     "\n",
-    "                print(f'The list of Expenses below:')\n",
-    "                for expense in loadedExpensesFile:\n",
-    "                    print(expense)\n",
     "            elif(viewName == 'View expenses'):\n",
     "                viewExpenses(addedExpenses)\n",
     "\n",
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "id": "624c2334",
    "metadata": {},
    "outputs": [
@@ -542,21 +551,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Expenses loaded successfully!\n",
+      "{'amount': '20.0', 'date': '2025-10-29', 'category': '', 'description': 'first test adding expenses without a category'}\n",
+      "{'amount': '25.0', 'date': '2025-10-29', 'category': 'Groceries', 'description': 'second test with category chosen'}\n",
+      "{'amount': '30.56', 'date': '2025-10-29', 'category': 'Groceries', 'description': 'testing for dollar sign currency input '}\n",
+      "{'amount': '45567.12', 'date': '2020-03-18', 'category': 'Education', 'description': 'testing past expenses adding fails'}\n",
+      "{'amount': '56765.21', 'date': '2025-10-29', 'category': 'Education', 'description': 'testing past dates not adding'}\n",
+      "{'amount': '34.56', 'date': '2025-10-29', 'category': 'Gas', 'description': 'testing view current added expenses'}\n",
+      "{'amount': '1235.78', 'date': '2025-12-29', 'category': 'Personal', 'description': 'testing incorrect inputs adding to file'}\n",
+      "{'amount': '43573.0', 'date': '2025-10-30', 'category': 'Personal', 'description': 'testing save'}\n",
+      "{'amount': '21354.0', 'date': '2025-10-30', 'category': 'Personal', 'description': 'testing addding'}\n",
       "Hi. What would you like to do?\n",
       "1. Add expense\n",
       "2. View expenses\n",
       "3. Track budget\n",
       "4. Save expenses\n",
       "5. Exit\n",
-      "You chose: Track budget \n",
+      "You chose: View expenses \n",
       "\n",
-      "1. Set budget\n",
-      "2. Track budget\n",
-      "You selected: Track budget \n",
+      "1. Load expenses\n",
+      "2. View expenses\n",
+      "You selected: View expenses \n",
       "\n",
-      "Last set monthly Budget: 80500.53\n",
-      "Total month's expenses so far: 56875.33\n",
-      "You have 23625.2 left for the month.\n",
       "Hi. What would you like to do?\n",
       "1. Add expense\n",
       "2. View expenses\n",
