Created CV 5-folds for SVD, NMF and KNN models. Wrote conclusion on the best model based on each model's performance.

--- a/capstoneProject/capstone_8/inc_8_movie_recs_Gentral.ipynb
+++ b/capstoneProject/capstone_8/inc_8_movie_recs_Gentral.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 475,
    "id": "55453f28",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,8 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.decomposition import TruncatedSVD, NMF\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
@@ -10196,13 +10197,362 @@
    "metadata": {},
    "source": [
     "### RMSE Metric Testing\n",
-    "- Test our models against RMSE to see how they perform"
+    "- Test our models against RMSE to see how they perform\n",
+    "    - SVD\n",
+    "    - NMF\n",
+    "    - KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "id": "21b8cba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>610</td>\n",
+       "      <td>117867</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>332</td>\n",
+       "      <td>97757</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>332</td>\n",
+       "      <td>26564</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>377</td>\n",
+       "      <td>26564</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>345</td>\n",
+       "      <td>27751</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100831</th>\n",
+       "      <td>555</td>\n",
+       "      <td>2478</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100832</th>\n",
+       "      <td>561</td>\n",
+       "      <td>2478</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100833</th>\n",
+       "      <td>597</td>\n",
+       "      <td>2478</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100834</th>\n",
+       "      <td>599</td>\n",
+       "      <td>2478</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100835</th>\n",
+       "      <td>527</td>\n",
+       "      <td>5560</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100836 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        userId  movieId  rating\n",
+       "0          610   117867     4.0\n",
+       "1          332    97757     4.0\n",
+       "2          332    26564     3.5\n",
+       "3          377    26564     3.5\n",
+       "4          345    27751     5.0\n",
+       "...        ...      ...     ...\n",
+       "100831     555     2478     3.0\n",
+       "100832     561     2478     4.0\n",
+       "100833     597     2478     3.0\n",
+       "100834     599     2478     2.5\n",
+       "100835     527     5560     1.0\n",
+       "\n",
+       "[100836 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 477,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_df = merged_df[[\"userId\", \"movieId\", \"rating\"]].copy(deep=True)\n",
+    "\n",
+    "\n",
+    "def rmse(y_true, y_pred):\n",
+    "    return root_mean_squared_error(y_true, y_pred)\n",
+    "\n",
+    "k_fold= KFold(n_splits=5, shuffle=True, random_state=320)\n",
+    "\n",
+    "ratings_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21b8cba7",
+   "id": "851476dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores for each epoch: [0.9174236160025242, 0.9212498083464109, 0.9216736515238544, 0.9162709268611643, 0.931446046103536]\n",
+      "SVD RMSE: 0.9216128097674978\n"
+     ]
+    }
+   ],
+   "source": [
+    "svd_rmse_scores = []\n",
+    "\n",
+    "for train_idx, test_idx in k_fold.split(ratings_df):\n",
+    "    \n",
+    "    train = ratings_df.iloc[train_idx]\n",
+    "    test = ratings_df.iloc[test_idx]\n",
+    "\n",
+    "    # Build user_item_matrix (train only)\n",
+    "    train_matrix = train.pivot_table(\n",
+    "        index=\"userId\",\n",
+    "        columns=\"movieId\",\n",
+    "        values=\"rating\"\n",
+    "    )\n",
+    "\n",
+    "    # Mean-centered\n",
+    "    user_means = train_matrix.mean(axis=1)\n",
+    "    train_centered = train_matrix.sub(user_means, axis=0)\n",
+    "\n",
+    "    # Fill NaNs with 0 for SVD\n",
+    "    train_filled_zeroes = train_centered.fillna(0)\n",
+    "\n",
+    "    # Train SVD\n",
+    "    svd = TruncatedSVD(n_components=50, random_state=320)\n",
+    "    user_features = svd.fit_transform(train_filled_zeroes)\n",
+    "\n",
+    "    # Reconstruct ratings\n",
+    "    preds = np.dot(user_features, svd.components_)\n",
+    "    preds_df = pd.DataFrame(\n",
+    "        preds,\n",
+    "        index=train_filled_zeroes.index,\n",
+    "        columns=train_filled_zeroes.columns\n",
+    "    ).add(user_means, axis=0)\n",
+    "\n",
+    "    # Evaluate RMSE only on test ratings\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "\n",
+    "    for _, row in test.iterrows():\n",
+    "        if row.userId in preds_df.index and row.movieId in preds_df.columns:\n",
+    "            y_true.append(row.rating)\n",
+    "            y_pred.append(preds_df.loc[row.userId, row.movieId])\n",
+    "\n",
+    "    svd_rmse_scores.append(rmse(y_true, y_pred))\n",
+    "\n",
+    "print(f\"Scores per epoch: {svd_rmse_scores}\")\n",
+    "print(f\"SVD RMSE: {np.mean(svd_rmse_scores)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc24a0d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores for each epoch: [3.176541432875569, 3.1881696226854275, 3.184275222436183, 3.171638250061356, 3.164676929132361]\n",
+      "NMF RMSE: 3.1770602914381794\n"
+     ]
+    }
+   ],
+   "source": [
+    "nmf_rmse_scores = []\n",
+    "\n",
+    "for train_idx, test_idx in k_fold.split(ratings_df):\n",
+    "\n",
+    "    train = ratings_df.iloc[train_idx]\n",
+    "    test = ratings_df.iloc[test_idx]\n",
+    "\n",
+    "    # Build user_item_matrix (train only)\n",
+    "    train_matrix = train.pivot_table(\n",
+    "        index=\"userId\",\n",
+    "        columns=\"movieId\",\n",
+    "        values=\"rating\"\n",
+    "    ).fillna(0)\n",
+    "\n",
+    "    # Train NMF\n",
+    "    nmf = NMF(n_components=50, random_state=320, max_iter=500)\n",
+    "    user_features = nmf.fit_transform(train_matrix)\n",
+    "\n",
+    "    # Reconstruct ratings\n",
+    "    preds = np.dot(user_features, nmf.components_)\n",
+    "    preds_df = pd.DataFrame(\n",
+    "        preds,\n",
+    "        index=train_matrix.index,\n",
+    "        columns=train_matrix.columns\n",
+    "    )\n",
+    "\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "\n",
+    "    # Evaluate RMSE only on test ratings\n",
+    "    for _, row in test.iterrows():\n",
+    "        if row.userId in preds_df.index and row.movieId in preds_df.columns:\n",
+    "            y_true.append(row.rating)\n",
+    "            y_pred.append(preds_df.loc[row.userId, row.movieId])\n",
+    "\n",
+    "    nmf_rmse_scores.append(rmse(y_true, y_pred))\n",
+    "\n",
+    "print(f\"Scores per epoch: {nmf_rmse_scores}\")\n",
+    "print(f\"NMF RMSE: {np.mean(nmf_rmse_scores)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "id": "3b2a7c3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores per epoch: [2.3360362883670143, 2.3428024966642402, 2.3214894658050658, 2.3201403853267912, 2.3134835759976555]\n",
+      "KNN RMSE: 2.3267904424321535\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_rmse_scores = []\n",
+    "\n",
+    "for train_idx, test_idx in k_fold.split(ratings_df):\n",
+    "\n",
+    "    train = ratings_df.iloc[train_idx]\n",
+    "    test = ratings_df.iloc[test_idx]\n",
+    "\n",
+    "    # Build user_item_matrix (train only)\n",
+    "    item_matrix = train.pivot_table(\n",
+    "        index=\"movieId\",\n",
+    "        columns=\"userId\",\n",
+    "        values=\"rating\"\n",
+    "    ).fillna(0)\n",
+    "\n",
+    "    # Train KNN\n",
+    "    knn = NearestNeighbors(n_neighbors=50, metric=\"cosine\")\n",
+    "    knn.fit(item_matrix)\n",
+    "\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "\n",
+    "    for _, row in test.iterrows():\n",
+    "\n",
+    "        if row.movieId not in item_matrix.index:\n",
+    "            continue\n",
+    "\n",
+    "        #Turn loc into 2D for kneighbors()\n",
+    "        movie_vector = item_matrix.loc[row.movieId].values.reshape(1, -1)\n",
+    "        distances, indices = knn.kneighbors(movie_vector, n_neighbors=6)\n",
+    "\n",
+    "        #Skip the first ID since it is the same as the parameter\n",
+    "        neighbor_ids = item_matrix.index[indices.flatten()[1:]]\n",
+    "        \n",
+    "        #For cosine similarity\n",
+    "        similarities = 1 - distances.flatten()[1:]\n",
+    "\n",
+    "        ratings = []\n",
+    "        for neighbor, sim in zip(neighbor_ids, similarities):\n",
+    "            rating = item_matrix.loc[neighbor, row.userId]\n",
+    "            if rating > 0:\n",
+    "                ratings.append(sim * rating)\n",
+    "\n",
+    "        if ratings:\n",
+    "            y_true.append(row.rating)\n",
+    "            y_pred.append(np.sum(ratings) / np.sum(similarities))\n",
+    "\n",
+    "    knn_rmse_scores.append(rmse(y_true, y_pred))\n",
+    "\n",
+    "print(f\"Scores per epoch: {knn_rmse_scores}\")\n",
+    "print(f\"KNN RMSE: {np.mean(knn_rmse_scores)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3518d6",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "- SVD performs the best of all 3 models for recommending movies, it has the lowest rmse value. \n",
+    "\n",
+    "SVD outperforms NMF and KNN due to its global hidden factors that it creates to learn user preferences and item characteristics, being able to mean-center and remove user bias helps a ton as well. The natural handling of a sparse matrix with mostly missing data is another edge over the other models. NMF can't handle negative values so we have to leave in the user bias and therefore RMSE being sensitive to scaling worsen the performance. KNN has to rely on local data and our matrix being very sparse hurt this model the most. SVD on this sparse non-biased data was the best option as reflected in the RMSE score.  \n",
+    "\n",
+    "There are a several reasons for this:\n",
+    "- SVD models hidden features such as a user liking some genres and disliking others, or this user likes explosions and fist fighting\n",
+    "- Mean-centering removed the user bias from the SVD model\n",
+    "- SVD naturally handles sparse matrices VERY well, condensing and using global structures instead of local similarities\n",
+    "- We can't mean-center NMF because it can't handle negative values causing this model to perform worse, the user bias leftover inflates RMSE that is sensitive to scaling\n",
+    "- NMF has a problem with random initialization making it hard to factorize\n",
+    "- The sparsity of the ratings between users was very large in our data, this hurts KNN RMSE the most"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44d55bf0",
    "metadata": {},
    "outputs": [],
    "source": []
